# Project

./: README.md  config.json.example
deploy/: iot-device-core.service  iot-device-web.service
device_core/: CMakeLists.txt  config.json
device_core/include/: actuator_base.h  database.h  device_manager.h  dht_sensor.h  digital_sensor.h  led_actuator.h  relay_actuator.h  sensor_base.h  ultrasonic_sensor.h
device_core/scripts/: setup_raspberry_pi.sh  setup_ubuntu.sh
device_core/src/: database.cpp  device_manager.cpp  dht_sensor.cpp  digital_sensor.cpp  led_actuator.cpp  main.cpp  relay_actuator.cpp  ultrasonic_sensor.cpp
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  start-vnc.sh  supervisord.conf
scripts/: docker_down.ps1  docker_down.sh  docker_up.ps1  docker_up.sh  run_web.sh
sql/: schema.sql
sql_student_lab/: Dockerfile  docker-compose.yml  entrypoint.sh  run_local.ps1
sql_student_lab/app/: demo.py
sql_student_lab/data/: teach.db
sql_student_lab/sql/: demo_queries.sql  init.sql
sql_training_stand/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
sql_training_stand/app/: app.py
sql_training_stand/app/templates/: index.html
sql_training_stand/scripts/: down.ps1  down.sh  up.ps1  up.sh
sql_training_stand/sql/: init.sql  practice_queries.sql
web/: app.py
web/templates/: index-1.html  index.html  main.cpp
